tests/parser/should_fail/T20609a.stderr

T20609a.hs:6:23: error: [GHC-58481] parse error on input ‘forall’
